2009-09-30  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl (Help): Work around Perl bug in
	pod2text. Change option presentation to notation
	'-o, --option'.

	* bin/lib/libcheck.sh: (top level): change all
	tail/head command to use --lines=N option.
	(CygbuildCmdInstallCheckBinFiles): Correct *Waen() call to
	*Warn().
	(CygbuildCmdInstallCheckSetupHintDependExists): search
	for exact library match. On failure, show close library
	matches.
	(CygbuildPerlLibraryDependsMain): Generate Perl cache.

	* bin/cygbuild.sh:  (top level): change all
	tail/head command to use --lines=N option.
	(CygbuildChmodExec): Return correct status.
	(CygbuildPostinstallWriteStanza): remove
	CygbuildChmodExec(). Add more quoting.
	(CygbuildInstallCygwinPartPostinstall): Install
	with modes 755, not 644.
	(CygbuildBootVariablesGlobalCachePerl): Correct typo.
	(CygbuildBootVariablesGlobalCachePython): Correct typo.
	(CygbuildHelpShort): Adjust layout.
	(CygbuildHelpLong): Move exit command to correct place.
	(CygbuildBootVariablesGlobalCachePerlGenerate): New.
	(CygbuildCygcheckLibraryDepListFull): Fix indentation.
	(CygbuildBootVariablesGlobalCachePythonGenerate): New.
	(CygbuildBootVariablesGlobalCacheGenerate): New.
	(CygbuildDefineGlobalRubyVersion): New.
	(CygbuildBootVariablesGlobalCacheRubyGenerate): New.
	(CygbuildBootVariablesGlobalCacheRuby): New.
	(CygbuildDefineGlobalPythonVersion): Return status
	(CygbuildDefineGlobalPerlVersion): Return status.

2009-09-29  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCommandMain): Add
	alias 'dirs' to 'mkdirs' command.

2009-09-28  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildProgramVersion): Add
	option 'short'.

2009-09-27  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh: (CygbuildCmdInstallCheckBinFiles):
	Ignore *.dll and *.pyc files and others. Change
	for loop to more efficient while loop which preferves
	file names correctly. Use stat(1) to read file size.