@@ -7,6 +7,8 @@
 	* bin/lib/libcheck.sh: (top level): change all
 	tail/head command to use --lines=N option.
 	(CygbuildCmdInstallCheckBinFiles): Correct *Waen() call to
+	(CygbuildPythonLibraryDependsCache): Generate cache.
+
 	*Warn().
 	(CygbuildCmdInstallCheckSetupHintDependExists): search
 	for exact library match. On failure, show close library
